[Tickets: 18642] Fix Wiki List overlapping long titles
git-svn-id: https://teamsupport.svn.beanstalkapp.com/main/trunk@2405 02885c34-e171-44ab-8435-42fb7a3c3aaf

--- a/WebApp/Resources/Pages/Wiki.css
+++ b/WebApp/Resources/Pages/Wiki.css
@@ -23,12 +23,8 @@
   margin-bottom: 20px;
   margin-left: -20px;
 }
-li.wiki-menu-item { line-height:1px; padding: 2px 0;}
-.wiki-sidebar > li > a {
-  padding-right: 20px;
-  padding-left: 20px;
-  color: #444;
-}
+
+.wiki-sidebar > li > a { padding:5px 20px 5px 20px; color: #444; }
 .wiki-sidebar > li > a.active,
 .wiki-sidebar > li > a.active:hover,
 .wiki-sidebar > li > a.active:focus { font-weight: bold; color: #428BCA; }
@@ -39,7 +35,7 @@ li.wiki-menu-item { line-height:1px; padding: 2px 0;}
     font-weight: 400;
     color: #444;
 }
-.wiki-sidebar-subitem > li > a {  color: #444; }
+.wiki-sidebar-subitem > li > a { padding:5px 20px 5px 20px;  color: #444; }
 .wiki-sidebar-subitem > li > a.active,
 .wiki-sidebar-subitem > li > a.active:hover,
 .wiki-sidebar-subitemr > li > a.active:focus {  color: #428BCA; }
